# fastapi_toy

./: README.md  config.py  main.py  pyproject.toml
server/: app.py  database.py
server/models/: student.py  user.py
server/routes/: student.py  user.py
